# tochka_test

./: .dockerignore  .env.example  .gitignore  LICENSE  conftest.py  deploy.sh  pyproject.toml  readme.md  setup.cfg  tasks.py  wait_for_postgres.sh
app/: __init__.py  config.py  conftest.py
app/configs/: config.py  sqla_config.py
app/fixtures/: __init__.py  initial.py  models.py
app/main/: __init__.py  urls.py
app/main/models/: __init__.py  subscriber.py
app/main/schemas/: subscriber.py
app/main/tests/: test_subscriber.py
app/main/views/: __init__.py  ping.py  subscriber.py
app/message_queue/: __init__.py  __main__.py  huey_tasks.py
app/tests/: conftest.py  test_ping.py  test_subscriber.py
app/utils/: base_schema.py  base_view.py  exceptions.py  logging_config.py  sqla_config.py
docker/: app_dockerfile  compose.yaml  docker-compose.yaml  huey_dockerfile
docker/nginx/: nginx.conf
migrations/versions/: 35938a6065b3_.py  387d9936b244_.py  5f7de36f1738_.py
